--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .sectionTitle {
   
-  align-self: center;
+  text-align: center;
   font-size: 2em;
   text-transform: uppercase;
   font-weight: bold;
@@ -142,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 50vh;
   width: 100%;
   height: 100vh;
-  background-image: url("../img/AR apppp.png");
+  background-image: url("../img/phone_bars_new.png");
   background-size: cover;
 }
 
