--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   z-index: 2;
   font-size: 18px;
-  background-image: linear-gradient(260deg, #ff0000 0%, #0000ff 100%);
+  background-image: linear-gradient(260deg, #00aa00 0%, #2282ff 100%);
 }
 
 #main-nav {
