--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   z-index: 2;
   font-size: 18px;
-  background-image: linear-gradient(260deg, #00aa00 0%, #2282ff 100%);
+  background-image: linear-gradient(260deg, #00aa00 0%, #0050b9 100%);
 }
 
 #main-nav {
@@ -129,7 +129,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /*SECTION HEADERS*/
 #workHeader {
-  background-image: url("../img/very much better TSA thingy.png");
+  background-image: url("../img/products.png");
 }
 
 
@@ -177,8 +177,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #aboutImg {
-  width: 40%;
-  height: auto;
+  width: 50%;
+  height: 50%;
   display: flex;
   justify-content: center;
 }
@@ -210,7 +210,12 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: right;
   /*justify-content: space-between;*/
+  text-decoration: none;
   flex-wrap: wrap;
+}
+a.projectTitle {
+    text-decoration: solid;
+    text-size-adjust: 24px
 }
 
 .project {
@@ -218,6 +223,7 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: wrap;
   justify-content: space-around;
   padding: 3vh 0;
+  
   align-items: right;
   position: relative; 
 }
@@ -249,6 +255,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .projectDetails {
   width: 70%;
+  
 }
 
 /*CONTACT SECTION*/
@@ -261,10 +268,10 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   font-size: 1.5em;
   margin-bottom: 10vh;
+  background-image: linear-gradient(260deg, #00aa00 0%, #2282ff 100%);
 }
-.sectionHeader2{
-  background-color: linear-gradient(260deg, #00aa00 0%, #2282ff 100%);
 }
+
 #social {
   display: flex;
   flex-direction: row;
@@ -298,10 +305,4 @@ justify-content: center;
   border: 1px solid black;
   border-collapse: collapse;
 }
-.
-}
-.pn{
-  text-align: center;
-}
 
-   
